# STM32F4-Bare-Metal-Guide

./: .gitignore  README.md
000_SETUP_ENVIRONMENT/: 01_ARM_TOOLCHAIN.md  02_CONNECT_STM32F4XX_TO_WSL_AND_UBUNTU.md  03_LOAD_FIRMWARE_ON_STM32F4XX.md  README.md  attach-usb-to-wsl.ps1  toolchain_setup.sh
000_SETUP_ENVIRONMENT/00_QUICK_SETUP/: toolchain_setup.sh
001_BARE_METAL/: Makefile  README.md
002_ADD_CMSIS/: Makefile  README.md  blink.elf
002_ADD_CMSIS/Linker_script/: linker_script.ld
002_ADD_CMSIS/Startup/: startup.s
003_DEBUGGER/: Makefile  README.md
003_DEBUGGER/Src/: main.c
004_ADD_PRINTF/: Makefile  README.md  blink.elf
004_ADD_PRINTF/Linker_script/: linker_script.ld
004_ADD_PRINTF/Src/: main.c
005_ADD_HAL_DRIVERS/: Makefile
005_ADD_HAL_DRIVERS/Src/: main.c
005_DIY_LIBRARY/500_DIY_GPIO/: README.md
005_DIY_LIBRARY/500_DIY_GPIO/Inc/: diy_gpio.h  system_clock.h
005_DIY_LIBRARY/500_DIY_GPIO/Src/: diy_gpio.c  main.c  system_clock.c
005_DIY_LIBRARY/501_DIY_CLOCK/Inc/: diy_clock.h  minimal_lib.h
005_DIY_LIBRARY/501_DIY_CLOCK/Src/: diy_clock.c  diy_gpio.c  main.c  minimal_lib.c
005_DIY_LIBRARY/501_DIY_CLOCK/Startup/: startup.s
006_ADD_HAL_DRIVERS/Src/: main.c
006_ADD_HAL_DRIVERS/Startup/: startup.s
006_ADD_TIMEBASE_TIM/: README.md
006_ADD_TIMEBASE_TIM/Startup/: startup.s
007_ADD_TIMEBASE_TIM/Src/: main.c
cmake_pending/: CMakeLists.txt
e001_bare_metal/: Makefile  README.md  blink.elf  linker_script.ld  startup.c  startup.s
e002_add_cmsis/: Makefile  README.md
e002_add_cmsis/Src/: main.c
e002_cmsis_cmake/: CMakeLists.txt  Makefile  README.md  main.c  toolchain_conf.cmake
e003_debugger/: Makefile  README.md  blink.elf
e004_cmake/: CMakeLists.txt  README.md  gcc-arm-none-eabi.cmake
e005_add_printf/: CMakeLists.txt  README.md
e005_add_printf/Src/: main.c
